// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`BindingForm desktop default 1`] = `
<article
  className="YpcBindingForm"
>
  <div
    className="YpcBindingForm-DieHardFrameContainer"
  >
    <div>
      BeforeDieHardFrame
    </div>
    <iframe
      className="YpcDieHardFrame YpcBindingForm-DieHardFrame"
      src="https://diehard.yandex.ru/web/card_form?desktop=1&purchase_token=yandex-pay&template_tag=modern%2Fform&lang=ru"
    />
  </div>
  children
  <div
    className="YpcBindingForm-PaymentButtonContainer"
  >
    <div>
      BeforePaymentButton
    </div>
    <button
      className="YpcButton YpcButton_disabled YpcPaymentButton YpcPaymentButton_disabled YpcBindingForm-PaymentButton"
      disabled={true}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      onPointerEnter={[Function]}
      onPointerLeave={[Function]}
      onPress={[Function]}
      onTouchStart={[Function]}
      tabIndex={-1}
      type="button"
    >
      Привязать
    </button>
  </div>
</article>
`;

exports[`BindingForm touch-phone default 1`] = `
<article
  className="YpcBindingForm"
>
  <div
    className="YpcBindingForm-DieHardFrameContainer"
  >
    <div>
      BeforeDieHardFrame
    </div>
    <iframe
      className="YpcDieHardFrame YpcBindingForm-DieHardFrame"
      src="https://diehard.yandex.ru/web/card_form?mobile=1&purchase_token=yandex-pay&template_tag=modern%2Fform&lang=ru"
    />
  </div>
  children
  <div
    className="YpcBindingForm-PaymentButtonContainer"
  >
    <div>
      BeforePaymentButton
    </div>
    <button
      className="YpcButton YpcButton_disabled YpcPaymentButton YpcPaymentButton_disabled YpcBindingForm-PaymentButton"
      disabled={true}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      onPointerEnter={[Function]}
      onPointerLeave={[Function]}
      onPress={[Function]}
      onTouchStart={[Function]}
      tabIndex={-1}
      type="button"
    >
      Привязать
    </button>
  </div>
</article>
`;
